--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aws-sdk": "^2.1584.0",
     "axios": "^1.6.8",
     "cors": "^2.8.5",
     "papaparse": "^5.4.1",
